--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://68.168.133.245/coucou.ipa</string>
+					<string>https://gather-forest.oss-cn-shenzhen.aliyuncs.com/201907/20190717114300840322757.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
