--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://manage.bi20.vip/20190721121837902111610172283121.ipa</string>
+					<string>https://gather-forest.oss-cn-shenzhen.aliyuncs.com/201907/20190718095849837848874.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
