--- a/manifest.plist
+++ b/manifest.plist
@@ -1,4 +1,4 @@
-是<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://gather-forest.oss-cn-shenzhen.aliyuncs.com/201907/20190718095849837848874.ipa</string>
+					<string>http://manage.bi20.vip/20190721121837902111610172283121.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
